vbnc/vbnc/vbnc/tests/Errors/30311-22.vb
Class T
    Const M_Decimal As Decimal = "c"c
End Class